Try #2 to fix form submit aligning in Android browser

--- a/_src/styles/main/form.scss
+++ b/_src/styles/main/form.scss
@@ -81,8 +81,7 @@
         }
 
         .button {
-            display: table;
-            margin-left: auto;
+            vertical-align: top;
         }
     }
 
